--- a/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -158,7 +158,7 @@ CurrentRotGridSize=2
 CurrentPosGridSize=4
 
 [DetailCustomWidgetExpansion]
-InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_Shoot.IA_Shoot,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_SkillTree.IA_SkillTree,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_LightShoot.IA_LightShoot,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_LightSpellChoice.IA_LightSpellChoice,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_DarkShoot.IA_DarkShoot,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_DarkSpellChoice.IA_DarkSpellChoice,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_Dash.IA_Dash,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_Melee.IA_Melee,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_Pause.IA_Pause
+InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_Shoot.IA_Shoot,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_SkillTree.IA_SkillTree,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_LightShoot.IA_LightShoot,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_LightSpellChoice.IA_LightSpellChoice,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_DarkShoot.IA_DarkShoot,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_DarkSpellChoice.IA_DarkSpellChoice,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_Melee.IA_Melee
 InputAction=
 K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.C1C838AA465C8F8E79A2ACB12EDDBDF6,K2Node_FunctionEntry.Inputs.254B5A5845B2748C882EE586DAC198CB
 StaticMeshComponent=CapsuleComponent.Collision.Collision,BP_Enemy_C.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
@@ -174,7 +174,7 @@ RotatingMovementComponent=BP_Enemy_C.Collision.Collision
 Blockout_Skewbox_C=BP_Enemy_C.Collision.Collision
 Portal_C=BP_Enemy_C.Collision.Collision
 StaticMeshActor=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,WorldSettings.WorldPartitionSetup.RuntimeHash,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
-BP_FirstPersonCharacter_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
+BP_FirstPersonCharacter_C=
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.PBRWorkflow,MaterialEditorInstanceConstant.ParameterGroups.Base Color,MaterialEditorInstanceConstant.ParameterGroups.Emissive,MaterialEditorInstanceConstant.ParameterGroups.MetallicRoughness,MaterialEditorInstanceConstant.ParameterGroups.Normal,MaterialEditorInstanceConstant.ParameterGroups.Occlusion,MaterialEditorInstanceConstant.ParameterGroups.Specular,MaterialEditorInstanceConstant.ParameterGroups.ClearCoat
 MaterialInstanceConstant=
 EdGraphNode_Comment=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
@@ -303,7 +303,7 @@ BP_Weapon_Component_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.
 W_SpellWheel_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision
 BP_Platform_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 BillboardComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
-BoxComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,WorldSettings.WorldPartitionSetup.RuntimeHash,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
+BoxComponent=
 W_SpawnWidget_C=
 Actor=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision
 PlayerStart=CapsuleComponent.Collision.Collision,BP_Enemy_C.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
@@ -354,7 +354,7 @@ MulticastInlineDelegatePropertyWrapper=BP_Enemy_C.Collision.Collision,CapsuleCom
 Comp_EnemyShoot_C=
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Widget/Menu
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -437,8 +437,8 @@ PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[5]\" \"Object.Mappings.Mappings.Mappings[10]\" \"Object.Mappings.Mappings.Mappings[10].Triggers\" \"Object.Mappings.Mappings.Mappings[11]\" \"Object.Mappings.Mappings.Mappings[12]\" \"Object.Mappings.Mappings.Mappings[13]\" \"Object.Mappings.Mappings.Mappings[14]\" \"Object.Mappings.Mappings.Mappings[14].Triggers\" \"Object.Mappings.Mappings.Mappings[15]\" \"Object.Mappings.Mappings.Mappings[16]\" "
-DataAsset="\"Object\" \"Object.Action.Triggers\" \"Object.Action.Modifiers\" "
-InputAction="\"Object\" \"Object.Action.Triggers\" \"Object.Action.Modifiers\" "
+DataAsset="\"Object\" "
+InputAction="\"Object\" "
 NiagaraBakerOutputTexture2D="\"Object\" "
 NiagaraBakerOutput="\"Object\" "
 NiagaraSystem="\"Object\" "
@@ -715,6 +715,7 @@ LODInfoUILayout="\"Object\" "
 [AssetEditorSubsystem]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
+OpenAssetsAtExit=/Game/Blueprints/Enemies/BP_Enemy.BP_Enemy
 
 [PluginBrowser]
 InstalledPlugins=BlockoutToolsPlugin
@@ -2577,26 +2578,26 @@ K2Node_Composite.Inputs=True
 K2Node_Composite.Outputs=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Widget/Menu/W_Options
-MRUItem1=/Game/Widget/Menu/W_Menu
-MRUItem2=/Game/Widget/Menu/W_Pause
-MRUItem3=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem4=/Game/FirstPerson/Input/Actions/IA_Dash
-MRUItem5=/Game/Blueprints/BP_WallRide
-MRUItem6=/Game/Audio/AudioSettings/SC_SFX
-MRUItem7=/Game/Widget/W_Main
-MRUItem8=/Game/FirstPerson/Blueprints/BP_Weapon_Component
-MRUItem9=/Game/Blueprints/Enemies/BP_Enemy
-MRUItem10=/Game/Maps/FirstPersonMap
-MRUItem11=/Game/Maps/Menu
-MRUItem12=/Game/Maps/ArenaTest
-MRUItem13=/Game/Characters/Mannequin_UE4/Animations/Jog_Fwd
-MRUItem14=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin_Skeleton
-MRUItem15=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin
-MRUItem16=/Game/Blueprints/BP_PortalResource
-MRUItem17=/Game/Widget/W_SkillPoint_ObtentionNotify
-MRUItem18=/Game/Blueprints/Enemies/Comp_EnemyShoot
-MRUItem19=/Game/Blueprints/Enemies/BP_EnemyProjectile
+MRUItem0=/Game/Widget/Menu/W_Pause
+MRUItem1=/Game/Blueprints/Enemies/BP_Enemy
+MRUItem2=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem3=/Game/Widget/Menu/W_Options
+MRUItem4=/Game/Maps/ArenaTest
+MRUItem5=/Game/Widget/SkillTree/W_SkillTree
+MRUItem6=/Game/FirstPerson/Input/IMC_Weapons
+MRUItem7=/Game/FirstPerson/Input/IMC_Default
+MRUItem8=/Game/Widget/Menu/W_Menu
+MRUItem9=/Game/FirstPerson/Input/Actions/IA_Dash
+MRUItem10=/Game/Blueprints/BP_WallRide
+MRUItem11=/Game/Audio/AudioSettings/SC_SFX
+MRUItem12=/Game/Widget/W_Main
+MRUItem13=/Game/FirstPerson/Blueprints/BP_Weapon_Component
+MRUItem14=/Game/Maps/FirstPersonMap
+MRUItem15=/Game/Maps/Menu
+MRUItem16=/Game/Characters/Mannequin_UE4/Animations/Jog_Fwd
+MRUItem17=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin_Skeleton
+MRUItem18=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin
+MRUItem19=/Game/Blueprints/BP_PortalResource
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Input/IMC_Weapons.IMC_Weapons=0
@@ -2783,7 +2784,7 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()),("/Game/Maps/FirstPersonMap.FirstPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=341.000 Y=0.000
+ScreenPosition=X=315.000 Y=151.000
 WindowSize=X=1284.000 Y=724.000
 InitiallyMaximized=True
 
@@ -3883,9 +3884,9 @@ bAutomaticallyCheckoutOnAssetModification=False
 bSCCUseGlobalSettings=False
 
 [MRU]
-MRUItem0=/Game/Maps/FirstPersonMap
-MRUItem1=/Game/Maps/Menu
-MRUItem2=/Game/Maps/ArenaTest
+MRUItem0=/Game/Maps/ArenaTest
+MRUItem1=/Game/Maps/FirstPersonMap
+MRUItem2=/Game/Maps/Menu
 MRUItem3=/Game/FirstPerson/Maps/FirstPersonMap
 
 [/Script/UnrealEd.MaterialEditorOptions]
@@ -4232,6 +4233,7 @@ CableComponent.Lighting=False
 StaticMeshComponent.Lighting=True
 WorldSettings.World=True
 Button.Accessibility=False
+W_Pause_C.Accessibility=False
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
